message Block {
  required int32 version = 1;
  required int32 timestamp = 2;
  required int64 totalAmount = 3;
  required int64 totalFee = 4;
  required int64 reward = 5;
  required int32 numberOfTransactions = 6;
  required int32 payloadLength = 7;
  required bytes payloadHash = 8;
  required bytes generatorPublicKey = 9;
  optional bytes blockSignature = 10;
  optional string previousBlock = 11;
  optional string id = 12;
  optional int64 height = 13;
  repeated Transaction transactions = 14;
}

message Transaction {
  required int32 type = 1;
  required int32 timestamp = 2;
  required bytes senderPublicKey = 3;
  required bytes signature = 4;
  optional string recipientId = 5;
  optional string senderId = 6;
  optional int64 amount = 7;
  optional int64 fee = 8;
  optional bytes requesterPublicKey = 9;
  optional bytes signSignature = 10;
  repeated string signatures = 11;
  optional string id = 12;
  optional int64 height = 13;
  optional string blockId = 14;
  required Asset asset = 15;
  repeated string args = 16;
  optional string message = 17;
}

message Asset {
  oneof derived_asset {
    AssetTransfer transfer = 1;
    AssetSignature signature = 2;
    AssetDelegate delegate = 3;
    AssetVote vote = 4;
    AssetMultisignature multisignature = 5;
    AssetDApp dapp = 6;
    AssetInTransfer inTransfer = 7;
    AssetOutTransfer outTransfer = 8;
    AssetStorage storage = 9;
    AssetUIAIssuer uiaIssuer = 10;
    AssetUIAAsset uiaAsset = 11;
    AssetUIAFlags uiaFlags = 12;
    AssetUIAAcl uiaAcl = 13;
    AssetUIAIssue uiaIssue = 14;
    AssetUIATransfer uiaTransfer = 15;
  }
}

message AssetTransfer {
}

message AssetSignature {
  required bytes publicKey = 1;
}

message AssetDelegate {
  required string username = 1;
  required bytes publicKey = 2;
}

message AssetVote {
  repeated string votes = 1;
}

message AssetMultisignature {
  required int32 min = 1;
  required int32 lifetime = 2;
  repeated string keysgroup = 3;
}

message AssetDApp {
  required int32 category = 1;
  required string name = 2;
  required int32 type = 3;
  required string link = 4;
  optional string description = 5;
  optional string tags = 6;
  optional string icon = 7;
  repeated string delegates = 8;
  required int32 unlockDelegates = 9;
}

message AssetInTransfer {
  required string dappId = 1;
  optional string currency = 2;
  optional string amount = 3;
}

message AssetOutTransfer {
  required string dappId = 1;
  required string transactionId = 2;
  optional string currency = 3;
  optional string amount = 4;
}

message AssetStorage {
  required bytes content = 1;
}

message AssetUIAIssuer {
  required string name = 1;
  required string desc = 2;
}

message AssetUIAAsset {
  required string name = 1;
  required string desc = 2;
  required string maximum = 3;
  required int32 precision = 4;
  optional string strategy = 5;
  optional int32 allowWriteoff = 6;
  optional int32 allowWhitelist = 7;
  optional int32 allowBlacklist = 8;
}

message AssetUIAFlags {
  required string currency = 1;
  required int32 flagType = 2;
  required int32 flag = 3;
}

message AssetUIAAcl {
  required string currency = 1;
  required string operator = 2;
  required int32 flag = 3;
  repeated string list = 4;
}

message AssetUIAIssue {
  required string currency = 1;
  required string amount = 2;
}

message AssetUIATransfer {
  required string currency = 1;
  required string amount = 2;
}

message BlockPropose {
  required int64 height = 1;
  required string id = 2;
  required int32 timestamp = 3;
  required bytes generatorPublicKey = 4;
  required string address = 5;
  required bytes hash = 6;
  required bytes signature = 7;
}

message BlockVotes {
  required int64 height = 1;
  required string id = 2;
  repeated BlockVoteSignature signatures = 3;
}

message BlockVoteSignature {
  required bytes key = 1;
  required bytes sig = 2;
}